# LearnCode

./: README.md  android.toolchain.cmake
Edit/: .project
Edit/app/src/main/: AndroidManifest.xml
Edit/app/src/main/java/com/text/edit/: HighlightTextView.java  MainActivity.java  OnFileListener.java  OnScrollListener.java  ScreenUtils.java  TextBuffer.java  TextHorizontalScrollView.java  (+3 more)
Edit/app/src/main/res/drawable/: ic_copy_white_24dp.xml  ic_cut_white_24dp.xml  ic_paste_white_24dp.xml  ic_undo_selector.xml
Edit/app/src/main/res/layout/: activity_main.xml  dialog_gotoline.xml
Edit/app/src/main/res/menu/: main.xml
Edit/app/src/main/res/values/: strings.xml
Edit2/app/: build.gradle
Edit2/app/src/main/res/drawable/: ic_copy_selector.xml  ic_cut_selector.xml  ic_paste_selector.xml  ic_redo_selector.xml  ic_select_all_selector.xml  ic_select_all_white_24dp.xml
Edit2/app/src/main/res/layout/: activity_main.xml
Edit2/app/src/main/res/menu/: main.xml
Edit2/app/src/main/res/values/: strings.xml  styles.xml
floating-player/: README.md
floating-player/app/: build.gradle
floating-player/gradle/wrapper/: gradle-wrapper.properties
linux-rbtree/: CMakeLists.txt  README.md  main.c  rbtree.h
ngx-server/: CMakeLists.txt  README.md  nginx.conf
ngx-server/src/: CMakeLists.txt
ngx-server/src/core/: main.cpp  ngx_config.cpp  ngx_log.cpp  ngx_string.cpp
ngx-server/src/include/: ngx_config.h  ngx_global.h  ngx_log.h  ngx_proc.h  ngx_string.h
ngx-server/src/proc/: ngx_daemon.cpp  ngx_proc.cpp  ngx_signal.cpp
smart-pointer/: CMakeLists.txt  README.md
(+9 files in other folders)
